Refactor: Refactor all

--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,3 @@
-SECRET_KEY='django-insecure-kykwp75pp3yyvd4nto#r%ipf87dn^+=+7%@p)pu8)%66)9c)cp'
+SECRET_KEY='django-insecure--ytj1s+0gcv4#4kb5bd+m+resk6@4&3byee2r+l9y3&rk_u1gu'
 DEBUG=True
 ALLOWED_HOSTS=*
