--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.2.6
 django-cors-headers==3.7.0
 django-environ==0.4.5
 djangorestframework==3.12.4
+gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2-binary==2.8.6
 pytz==2021.1
